guest-setup: remove custom centos repos
They are not needed anymore with the latest CS10 image update.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.pre-commit-config-maintainer.yaml
+++ b/.pre-commit-config-maintainer.yaml
@@ -73,6 +73,8 @@ repos:
             terragrunt/environments/.*/server/pods/.*|
             terragrunt/environments/.*/artemis/config/.*|
             terragrunt/environments/.*/worker/citool-config/.*|
+            terragrunt/environments/.*/worker-public/citool-config/.*|
+            terragrunt/environments/.*/worker-redhat/citool-config/.*
           )$
       - id: terragrunt_fmt
 
