--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -169,6 +169,10 @@ production/destroy: .FORCE terminate/artemis/guests/production  ## Destroy | pro
 production/kubeconfig: .FORCE  ## Update kubeconfig for production environment
 	aws eks --profile fedora_us_east_1 update-kubeconfig --name testing-farm-production
 
+production/public/proxy/nomad:  ## Setup ssh proxy for Public ranch nomad
+	@echo -e "🚀 \033[0;32mSetting up ssh proxy for public ranch nomad: http://localhost:4646\033[0m"
+	@ssh -fNL 4646:localhost:4646 testing_farm_public_server_01
+
 .create/redhat/worker%:
 	ansible-playbook -v ansible/playbooks/create-redhat-worker.yaml
 
