--- a/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
@@ -32,13 +32,11 @@ ansible_ssh_private_key_file: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_worke
 # nomad
 nomad_servers: >
   [
-    {% for host in groups["testing_farm_public_servers"] %}
-      "{{ hostvars[host].ansible_host }}"{{ "," if not loop.last else "" }}
-    {% endfor %}
+    "nomad.dev-{{ lookup('env', 'USER') }}.testing-farm.io"
   ]
 
 # nomad role
-nomad_version: 0.12.1
+nomad_version: 1.7.7
 nomad_user: root
 nomad_group: root
 nomad_disable_update_check: true
@@ -70,20 +68,20 @@ jobs:
   - tf-sti
 
 # artifacts
-artifacts_hostname: artifacts.dev.testing-farm.io
+artifacts_hostname: artifacts.dev-{{ lookup('env', 'USER') }}.testing-farm.io
 
 # worker instance details
-worker_instance_type: i3.2xlarge
+worker_instance_type: i3.large
 worker_image_id: ami-02942164e2807a6a8  # Fedora-Cloud-Base-39-1.5.x86_64-hvm-us-east-2-gp3-0
 worker_subnet: subnet-4f971734
 worker_security_group: sg-0040a2477d37dd6d0
 
 worker_resource_tags:
-  Name: "testing_farm_worker_{{ lookup('pipe', 'uuidgen | sed s/-.*//') }}"
+  Name: "testing_farm_dev_worker_{{ lookup('env', 'USER') }}_{{ lookup('pipe', 'uuidgen | sed s/-.*//') }}"
   FedoraGroup: ci
   ServiceOwner: TFT
   ServiceName: TestingFarm
   ServiceComponent: Worker
-  ServicePhase: Prod
+  ServicePhase: Dev
 
-worker_group_name: testing_farm_public_workers
+worker_group_name: testing_farm_public_dev_workers
