--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -103,8 +103,8 @@ dev/kubeconfig: .FORCE  ## Update kubeconfig for development environemnt
 staging/init: .FORCE  ## Initialize | staging | all
 	$(call run_terragrunt,staging,init)
 
-staging/init/artemis/ci: .FORCE  ## Initialize | staging | artemis | CI
-	$(call run_terragrunt,staging/artemis-ci,init)
+staging/init/ci: .FORCE  ## Initialize | staging | artemis | CI
+	$(call run_terragrunt,staging/ci,init)
 
 staging/plan: .FORCE  ## Plan deployment | staging
 	$(call run_terragrunt,staging,plan)
@@ -115,8 +115,8 @@ staging/plan/eks: .FORCE  ## Plan deployment | staging | eks
 staging/plan/artemis: .FORCE  ## Plan deployment | staging | artemis
 	$(call run_terragrunt,staging/artemis,plan)
 
-staging/plan/artemis/ci: .FORCE  ## Plan deployment | staging | artemis | CI
-	$(call run_terragrunt,staging/artemis-ci,plan)
+staging/plan/ci: .FORCE  ## Plan deployment | staging | artemis | CI
+	$(call run_terragrunt,staging/ci,plan)
 
 staging/apply: .FORCE  ## Deploy | staging | all
 	$(call run_terragrunt,staging,apply)
@@ -127,14 +127,14 @@ staging/apply/eks: .FORCE  ## Deploy | staging | eks
 staging/apply/artemis: .FORCE  ## Deploy | staging | artemis
 	$(call run_terragrunt,staging/artemis,apply)
 
-staging/apply/artemis/ci: .FORCE  ## Deploy | staging | artemis | CI
-	$(call run_terragrunt,staging/artemis-ci,apply)
+staging/apply/ci: .FORCE  ## Deploy | staging | artemis | CI
+	$(call run_terragrunt,staging/ci,apply)
 
 staging/destroy: .FORCE terminate/artemis/guests/staging  ## Destroy | staging
 	$(call run_terragrunt,staging,destroy)
 
-staging/destroy/artemis/ci: .FORCE terminate/artemis/guests/staging/ci  ## Destroy | staging | artemis | CI
-	$(call run_terragrunt,staging/artemis-ci,destroy)
+staging/destroy/ci: .FORCE terminate/artemis/guests/staging/ci  ## Destroy | staging | artemis | CI
+	$(call run_terragrunt,staging/ci,destroy)
 
 staging/kubeconfig: .FORCE  ## Update kubeconfig for staging environment
 	aws eks --profile fedora_us_east_1 update-kubeconfig --name testing-farm-staging
@@ -280,7 +280,7 @@ generate/staging/citool-config: .FORCE  ## Generate citool-config | staging
 	poetry run python setup/generate_environment.py staging
 
 generate/staging/citool-config/ci: .FORCE  ## Generate citool-config | staging | CI
-	ARTEMIS_DEPLOYMENT=artemis-ci poetry run python setup/generate_environment.py staging
+	ARTEMIS_DEPLOYMENT=ci poetry run python setup/generate_environment.py staging
 
 generate/staging/citool-config/container/ci: .FORCE  ## Generate citool-config for containers | staging | CI
 	ARTEMIS_DEPLOYMENT=none poetry run python setup/generate_environment.py staging
@@ -323,7 +323,7 @@ wait/artemis/staging: .FORCE  ## Wait until Artemis is available | staging
 	@bash setup/wait_artemis_available.sh staging
 
 wait/artemis/staging/ci: .FORCE  ## Wait until Artemis is available | staging | CI
-	@ARTEMIS_DEPLOYMENT=artemis-ci bash setup/wait_artemis_available.sh staging
+	@ARTEMIS_DEPLOYMENT=ci bash setup/wait_artemis_available.sh staging
 
 
 ##@ Cleanup | maintainer
@@ -335,7 +335,7 @@ terminate/artemis/guests/staging: .FORCE  ## Terminate all EC2 instances created
 	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging || true
 
 terminate/artemis/guests/staging/ci: .FORCE  ## Terminate all EC2 instances created by Artemis | staging | CI
-	@ARTEMIS_DEPLOYMENT=artemis-ci bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging || true
+	@ARTEMIS_DEPLOYMENT=ci bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging || true
 
 terminate/artemis/guests/production: .FORCE  ## Terminate all EC2 instances created by Artemis | staging
 	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh production || true
