Add vault modules to to access Ansible Vault secrets
We will use this module to consume Ansible Vault secrets.

Add a terratest based test for the module, as a prorotype how to test
other of our modules.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -285,6 +285,9 @@ test/staging/compose/ci: .FORCE wait/artemis/staging/ci generate/staging/citool-
 test/pytest/oculus: .FORCE  ## Download oculus to .pytest directory
 	$(call download_oculus_to_pytest)
 
+test/terraform/modules:  ## Run terratest tests for Teraform modules
+	env -C terragrunt/modules/vault/test go test -v
+
 generate/dev/citool-config: .FORCE  ## Generate citool-config | dev
 	poetry run python setup/generate_environment.py dev
 
