production/worker-redhat: ignore tag repo for SAP images
The sap images do not work with tag repository, see this thread:

https://redhat-internal.slack.com/archives/C03BRN71JAF/p1712055449400599

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -116,6 +116,7 @@
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
+    - '"sap" not in IMAGE_NAME|lower'
 
   #
   # block: end
@@ -129,8 +130,9 @@
       Skipping adding tag repository, because IMAGE_NAME variable is undefined,
       or it is unsupported.
 
-  when:
-    - IMAGE_NAME is undefined
-    - '"auto-osbuild" in IMAGE_NAME|lower'
-    - '"composer-api" in IMAGE_NAME|lower'
-    - '"hardened" in IMAGE_NAME|lower'
+  when: >
+    IMAGE_NAME is undefined
+    or '"auto-osbuild" in IMAGE_NAME|lower'
+    or '"composer-api" in IMAGE_NAME|lower'
+    or '"hardened" in IMAGE_NAME|lower'
+    or '"sap" in IMAGE_NAME|lower'
